{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 76,
  "lineage": "b2e3d772-131e-974c-755b-5c20dd331060",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "firewall",
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/azureFirewalls/firewall/applicationRuleCollections/hub",
            "name": "hub",
            "priority": 100,
            "resource_group_name": "SandrosLab",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "google",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.1.0.0/16"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "*.google.com"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.main",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "firewall",
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/azureFirewalls/firewall/natRuleCollections/rdp",
            "name": "rdp",
            "priority": 100,
            "resource_group_name": "SandrosLab",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "20.71.9.112"
                ],
                "destination_ports": [
                  "22"
                ],
                "name": "rdp",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "193.134.170.35/32"
                ],
                "source_ip_groups": [],
                "translated_address": "10.1.2.4",
                "translated_port": "22"
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.main",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.subnetHA",
            "azurerm_virtual_network.hub",
            "module.angelina.azurerm_linux_virtual_machine.vm",
            "module.angelina.azurerm_network_interface.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "firewall",
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/azureFirewalls/firewall/networkRuleCollections/hub",
            "name": "hub",
            "priority": 100,
            "resource_group_name": "SandrosLab",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "209.244.0.3",
                  "209.244.0.4"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "53"
                ],
                "name": "dns",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "10.1.0.0/16"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.main",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkSecurityGroups/nsg4",
            "location": "westeurope",
            "name": "nsg4",
            "resource_group_name": "SandrosLab",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "193.134.170.35",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/publicIPAddresses/firewall",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.71.9.112",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "firewall",
            "resource_group_name": "SandrosLab",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/routeTables/RouteTable",
            "location": "westeurope",
            "name": "RouteTable",
            "resource_group_name": "SandrosLab",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "internet",
                "next_hop_in_ip_address": "10.1.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.main",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "SandrosLab",
            "virtual_network_name": "ps-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetHA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-hub-vnet/subnets/subnet-ha",
            "name": "subnet-ha",
            "resource_group_name": "SandrosLab",
            "virtual_network_name": "ps-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetHB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.0/24",
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-hub-vnet/subnets/subnet-HB",
            "name": "subnet-HB",
            "resource_group_name": "SandrosLab",
            "virtual_network_name": "ps-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetSA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.1.0/24",
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet/subnets/subnet-sa",
            "name": "subnet-sa",
            "resource_group_name": "SandrosLab",
            "virtual_network_name": "ps-spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet/subnets/subnet-sa",
            "network_security_group_id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkSecurityGroups/nsg4",
            "subnet_id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet/subnets/subnet-sa"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg4",
            "azurerm_resource_group.main",
            "azurerm_subnet.subnetSA",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "guid": "c88d0f95-6042-4d98-8935-37b42da1b06e",
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-hub-vnet",
            "location": "westeurope",
            "name": "ps-hub-vnet",
            "resource_group_name": "SandrosLab",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "guid": "425d6c07-928d-47d2-b3d2-da0c9c6ce3d3",
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet",
            "location": "westeurope",
            "name": "ps-spoke-vnet",
            "resource_group_name": "SandrosLab",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-hub-vnet/virtualNetworkPeerings/peer1to2",
            "name": "peer1to2",
            "remote_virtual_network_id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet",
            "resource_group_name": "SandrosLab",
            "use_remote_gateways": false,
            "virtual_network_name": "ps-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet/virtualNetworkPeerings/peer2to1",
            "name": "peer2to1",
            "remote_virtual_network_id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-hub-vnet",
            "resource_group_name": "SandrosLab",
            "use_remote_gateways": false,
            "virtual_network_name": "ps-spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.angelina",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkInterfaces/angelina",
            "internal_domain_name_suffix": "suhy1sccmcme1cjvg40c1inqng.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-hub-vnet/subnets/subnet-ha"
              }
            ],
            "location": "westeurope",
            "name": "angelina",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "SandrosLab"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.subnetHA",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.angelina",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "westeurope",
            "name": "nsg1",
            "resource_group_name": "SandrosLab",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "193.134.170.35",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.luna",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkInterfaces/luna",
            "internal_domain_name_suffix": "a3wf0qunsljepm4s1igjy1hd0d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet/subnets/subnet-sa"
              }
            ],
            "location": "westeurope",
            "name": "luna",
            "private_ip_address": "10.2.1.5",
            "private_ip_addresses": [
              "10.2.1.5"
            ],
            "resource_group_name": "SandrosLab"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.subnetSA",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.luna",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkSecurityGroups/nsg3",
            "location": "westeurope",
            "name": "nsg3",
            "resource_group_name": "SandrosLab",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "193.134.170.35",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.ruby",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkInterfaces/ruby",
            "internal_domain_name_suffix": "a3wf0qunsljepm4s1igjy1hd0d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/virtualNetworks/ps-spoke-vnet/subnets/subnet-sa"
              }
            ],
            "location": "westeurope",
            "name": "ruby",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "SandrosLab"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.subnetSA",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.ruby",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67a50bc-70b2-4838-8598-c9fb1880a4ac/resourceGroups/SandrosLab/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "location": "westeurope",
            "name": "nsg2",
            "resource_group_name": "SandrosLab",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "193.134.170.35",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.spoke"
          ]
        }
      ]
    }
  ]
}